--- a/Solution1/WebApp.MVC/Views/Shared/_Layout.cshtml
+++ b/Solution1/WebApp.MVC/Views/Shared/_Layout.cshtml
@@ -26,11 +26,11 @@
                         </li>
                         @if (Context.User.Identity.IsAuthenticated)
                         {
-                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
                         }
                         else
                         {
-                            <li><a class="nav-link text-dark"  asp-area="" asp-controller="Login" asp-action="Login">Login</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
                         }
                     </ul>
                 </div>
