--- a/Solution1/WebApp.MVC/Views/Shared/_Layout.cshtml
+++ b/Solution1/WebApp.MVC/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                         else
                         {
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">SignUp</a></li>
                         }
                     </ul>
                 </div>
