--- a/Solution1/WebApp.ThirdParty/Views/Auth/Register.cshtml
+++ b/Solution1/WebApp.ThirdParty/Views/Auth/Register.cshtml
@@ -1,10 +1,9 @@
-﻿@model WebApp.ThirdParty.ViewModels.LoginViewModel
-
+﻿@model WebApp.ThirdParty.ViewModels.RegisterViewModel
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Register";
 }
 
-<h1>Login</h1>
+<h1>Register</h1>
 
 <hr />
 <div class="row">
@@ -20,6 +19,11 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
