--- a/Solution1/WebApp.ThirdParty/Views/Shared/_Layout.cshtml
+++ b/Solution1/WebApp.ThirdParty/Views/Shared/_Layout.cshtml
@@ -22,8 +22,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">@User.Identity.Name</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (Context.User.Identity.IsAuthenticated)
+                        {
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Login</a></li>
+                            <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Register">SignUp</a></li>
+                        }
                     </ul>
                 </div>
             </div>
