--- a/Solution1/IdentityServer/Views/HomeABC/Index.cshtml
+++ b/Solution1/IdentityServer/Views/HomeABC/Index.cshtml
@@ -6,4 +6,4 @@
 <h1>Home ABC</h1>
 
 Email is Successfully Confirmed
-<a href="https://localhost:44368/Account/Login">Click here</a>  to Login
+<a href="https://localhost:44366/Auth/login">Click here</a>  to Login
