--- a/Solution1/WebApp.ThirdParty/Views/Shared/_Layout.cshtml
+++ b/Solution1/WebApp.ThirdParty/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject IAuthorizationService authService
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -26,26 +27,60 @@
                         </li>
                         @if (Context.User.Identity.IsAuthenticated)
                         {
+                            var userclaim = Context.User.Claims.Where(x => x.Type == "UserRoleClaim").FirstOrDefault().Value;
+
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a></li>
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a></li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
                             </li>
+
                         }
                         else
                         {
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Login">Login</a></li>
                             <li><a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Register">SignUp</a></li>
                         }
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <h3 class="title has-text-centered">Admin Panel</h3>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        <div class="container">
+            <div class="columns">
+                <div class="column is-3">
+                    <div class="menu">
+                        @if ((await authService.AuthorizeAsync(User, "Manager")).Succeeded)
+                        {
+                            var role = User.Claims.Where(x => x.Type == "UserRoleClaim").FirstOrDefault().Value;
+                            var userclaim = Context.User.Claims.Where(x => x.Type == "UserRoleClaim").FirstOrDefault().Value;
+                            <p class="menu-label">Store Menu</p>
+                            <ul class="menu-list">
+                                <li><a asp-page="/Admin/Index">Products</a></li>
+                                <li><a asp-page="/Admin/OrderManagement">Order Management</a></li>
+                                <li><a asp-page="/Admin/Stock">Stock</a></li>
+                            </ul>}
+                        @if ((await authService.AuthorizeAsync(User, "Admin")).Succeeded)
+                        {
+                            <p class="menu-label">Admin Menu</p>
+                            <ul class="menu-list">
+                                <li><a asp-page="/Admin/ConfigureUsers">Configure Users</a></li>
+                            </ul>}
+                        <p class="menu-label"></p>
+                        <ul class="menu-list">
+                            <li><a asp-page="/Index">Back to Main</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column is-9">
+                    @RenderBody()
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="border-top footer text-muted">
