--- a/Solution1/WebApp.ThirdParty/Views/_ViewImports.cshtml
+++ b/Solution1/WebApp.ThirdParty/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApp.ThirdParty
 @using WebApp.ThirdParty.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Authorization
