working on companies razor pages project

--- a/Solution1/WebApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/Solution1/WebApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 ">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">WebApp.RazorPages</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -24,10 +24,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Account/Login">Login</a>
-                        </li>
+
+                        @if (Context.User.Identity.IsAuthenticated)
+                        {
+                            var userclaim = Context.User.Claims.Where(x => x.Type == "UserRoleClaim").FirstOrDefault().Value;
+
+                            <li><a class="nav-link text-dark" asp-area="" asp-page="Companies/Index">Companies</a></li>
+                            <li><a class="nav-link text-dark " href="Account/Logout">Logout</a></li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="Account/Login">Login</a>
+                            </li>
+                           
+                        }
                     </ul>
+                   
                 </div>
             </div>
         </nav>
